--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "remark-parse": "^11.0.0",
     "remark-prism": "^1.3.6",
     "remark-rehype": "^11.1.2",
+    "sonner": "^2.0.6",
     "unified": "^11.0.5"
   },
   "devDependencies": {
