--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emailjs/browser": "^4.4.1",
     "framer-motion": "^12.23.1",
     "gray-matter": "^4.0.3",
-    "next": "15.2.8",
+    "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prismjs": "^1.30.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^5.0.5",
     "react-icons": "^5.5.0",
     "rehype-prism-plus": "^2.0.1",
     "rehype-stringify": "^10.0.1",
